--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
@@ -7,24 +7,34 @@ Responde como cierto o falso según corresponda.
 Preguntas:
 1. ¿Es un algoritmo un conjunto de pasos precisos, definidos y finitos que conducen a la solución de un problema? (valor 0.5)
 
-
+Cierto
 
 2. ¿Todo algoritmo debe obedecer a la estructura básica de un sistema, es decir:
 ENTRADA -- PROCESO -- SALIDA?(valor 0.5)
 
+cierto
 
 3. ¿Al diseñar un algoritmo se deben tener presente las características de precisión, definición y finitud?(valor 0.5)
+
+cierto
 
 4. De las siguientes descripciones, menciona cuál es un algoritmo cualitativo y cuál es un algoritmo cuantitativo:
 
       a) El proceso de realizar un sándwich por la mañana. (valor 0.5)
+      
+      cualitativo
 
       b) El proceso de calcular la edad de una persona sabiendo su fecha de nacimiento.(valor0. 5)
-
+      
+      cuantitativo
+      
       c) Sumar cuántos comentarios tuvo una publicación en alguna red social. (valor 0.5)
+
+      cuantitativo
 
       d) El proceso que seguiste para inscribirte a la Escuela de Códigos. (valor 0.5)
      
+     cualitativo
 
 5.- Para lavarse las manos necesitamos: un jabón, un recipiente con agua, una toalla y nuestras manos. Tomamos el recipiente con agua y vaciamos un poco para humedecer
 nuestras manos. Tomamos el jabón y lo frotamos entre nuestras manos de tal manera que genere espuma. Dejamos a lado el jabón y con la espuma generada frotamos
@@ -34,11 +44,12 @@ secamos el agua de nuestras manos. ¡Listos! Tenemos nuestras manos limpias.
 
     En el texto anterior señala qué parte pertenece a la entrada, proceso y resultado de un algoritmo. (valor 1.5)
 
-    Entrada: 
+    Entrada:  Para lavarse las manos necesitamos: un jabón, un recipiente con agua, una toalla y nuestras manos. 
 
-    Proceso: 
+    Proceso: Tomamos el recipiente con agua y vaciamos un poco para humedecer nuestras manos. Tomamos el jabón y lo frotamos entre nuestras manos de tal manera que genere espuma. Dejamos a lado el jabón y con la espuma generada frotamos nuestras manos y entrelazamos nuestros dedos. Tomamos el recipiente con agua y enjuagamos hasta que retiremos toda la espuma y los residuos de jabón.
 
-    Resultado:
+    Resultado:si nuestras manos están lo suficientemente limpias, si no, realizamos el procedimiento anterior. Si nuestras manos están lo suficientemente limpias, tomamos la toalla y secamos el agua de nuestras manos. ¡Listos! Tenemos nuestras manos limpias.
+
 
 
 2️⃣ OPERADORES
@@ -53,16 +64,69 @@ Preguntas:
 
     a) (100/5^2 + 1) + 11 * 3 =   (valor 0.5)
    
-
+   (100/5^2 + 1) = 5^2 = 25
+   
+   100/25 = 4
+   
+   4+1 =5
+   
+   5 + 11 * 3
+   
+   11*3 = 33
+   
+   5+33 = 38
 
     b) (18/9 + 24) – ( 5 * 4 – 3^3) =      (valor 0.5)
    
+   (18/9 + 24)
+   
+   18/9 = 2
+   
+   2+24 = 26
+   
+   ( 5 * 4 – 3^3)
+   
+   3^3 = 27
+   
+   5*4 = 20
+   
+   20-27 =-7
+   
+   26 - (-)7
+   
+   26+7 = 33   
+   
  
     c) ((8-6)^2 * 3 - 2)^3 =        (valor 0.5)
-
+  (8-6)^6 * 3^3 - 2^3
+  
+  (8-6)^6 = 8^6 -6^6
+  
+  8^6 = 262144
+  
+  6^6 = 46656
+  
+  
+  
 
     d) (3^2 + 10/2) + (3 * 9 - 1) =      (valor 0.5)
- 
+      
+     (3^2 + 10/2)
+     
+     3^2=9
+     
+     10/2= 5
+     
+     9+5 = 14
+     
+     (3 * 9 - 1)
+     
+     3*9 = 27
+     
+     27-1=26
+     
+     14+26=40
+     
 
 2. Evalúe con FALSO o VERDADERO las siguientes expresiones relacionales. (valor 0.4 cada respuesta de la tabla)
 
