--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
@@ -98,15 +98,21 @@ Preguntas:
    
  
     c) ((8-6)^2 * 3 - 2)^3 =        (valor 0.5)
-  (8-6)^6 * 3^3 - 2^3
   
-  (8-6)^6 = 8^6 -6^6
+  (8-6)^2 * 3 - 2)
   
-  8^6 = 262144
+  8-6=2
   
-  6^6 = 46656
+  2^2 * 3 - 2
   
-  
+  2^2= 4
+      
+    4 * 3 = 12
+    
+    12-2 =10
+    
+    10^3= 1000
+    
   
 
     d) (3^2 + 10/2) + (3 * 9 - 1) =      (valor 0.5)
@@ -133,34 +139,37 @@ Preguntas:
         Expresión                                        Resultado
 
         “Juan Hernández” <> “Juan Hdz.”
-        4 + 5 >= 9
-        -7*4/2 < 0
-        ‘A’ = ‘a’
+        4 + 5 >= 9                                      verdadero
+        -7*4/2 < 0                                      verdadero
+        ‘A’ = ‘a’                                       falso
 
 
 3. Juan gana $200 por hora, Pedro gana $120 por hora. Esta quincena Juan trabajó 10 horas y Pedro 15, ¿Juan recibió un sueldo mayor al de Pedro?
 (valor 0.4 )
 
-    Resultado
+    Resultado 
+    
+    verdadero
 
 4. Evalúe con FALSO o VERDADERO las siguientes expresiones lógicas. (valor 0.4 cada respuesta de la tabla)
 
         Expresión                                     Resultado
 
-        15 = 6 AND 2 < 8 
+        15 = 6 AND 2 < 8                              falso
 
-        (10-2 > 9) OR (5*4 = 21)
+        (10-2 > 9) OR (5*4 = 21)                      FALSO
 
-        (2==1) || (-1==-1)
+        (2==1) || (-1==-1)                            VERDADERO
 
-        (2==2) && (3==-1)
+        (2==2) && (3==-1)                             FALSO
 
 
 5. Los requisitos para sacar una credencial electoral son: ser mayor de edad y ser de  nacionalidad mexicana. Si Ómar tiene 21 años y nació en la Ciudad de México, ¿puede
 sacar la credencial? (valor 0.4 )
 
     Respuesta: 
-
+    
+    VERDADERO
 
 3️⃣ CONCEPTOS BÁSICOS DE PROGRAMACIÓN
 
@@ -173,13 +182,13 @@ por cada respuesta correcta de la tabla )
 
     Significado                                                            Concepto
 
-    Es un bloque de instrucciones (código
+    Es un bloque de instrucciones (código                                     PROGRAMA
     fuente) escritas en cierto lenguaje de
     programación cuyo propósito es resolver
     un problema.
 
 
-    Programa informático que procesa el
+    Programa informático que procesa el                                      INTERPRETE
     código fuente de un proyecto de software
     durante su tiempo de ejecución, es decir,
     mientras el software se está ejecutando, y
@@ -187,7 +196,7 @@ por cada respuesta correcta de la tabla )
     proyecto y el procesador.
 
 
-    Es un idioma artificial creado para
+    Es un idioma artificial creado para                                       LENGUAJE DE PROGRAMACIÓN
     indicarle a la computadora lo que debe
     hacer. tiene ciertas reglas de escritura
     (sintaxis) en las que utiliza símbolos y
@@ -195,13 +204,13 @@ por cada respuesta correcta de la tabla )
     (interpretación interna).
 
 
-    La computadora realiza una traducción de
+    La computadora realiza una traducción de                                  EJECUCIÓN DE UN PROGRAMA
     sus componentes al lenguaje máquina, es
     decir, convierte las instrucciones en
     cadenas de ceros y unos.
 
 
-    Programa informático que traduce todo el
+    Programa informático que traduce todo el                                  COMPILADOR
     código fuente de un proyecto de software
     a código máquina antes de ejecutarlo.
     Solo entonces el procesador ejecuta el
@@ -222,28 +231,28 @@ Preguntas:
 
 1. Menciona al menos 3 tipos de datos que existen: (valor 0.4)
 
-    Respuesta:
+    Respuesta: CARACTER, NUMERICOS, BOLEANOS
 
 2. ¿Qué tipo es cada uno de los siguientes datos? (valor 0.4 por cada inciso)
 
                                                                                       Tipo de dato
-        a) 15
+        a) 15                                                                             NUMERICO
 
-        b) ‘a’
+        b) ‘a’                                                                            CARACTER
 
-        c) El mensaje ‘Esto es dato entero’
+        c) El mensaje ‘Esto es dato entero’                                               STRING
 
-        d) 35 >= 12
+        d) 35 >= 12                                                                       RACIONALES
 
-        e) 3*3
+        e) 3*3                                                                            NUMERICO
 
-        f) La edad de una persona
+        f) La edad de una persona                                                         NUMERICO
 
-        g) El pago por un servicio o producto
+        g) El pago por un servicio o producto                                             NUMERICO
 
-        h) El símbolo ‘@’
-
-        i) El mensaje ‘Agrega más artículos a tu canasta para envío GRATIS’
+        h) El símbolo ‘@’                                                                 CARACTER
+                        
+        i) El mensaje ‘Agrega más artículos a tu canasta para envío GRATIS’               STRING
 
 
 12. Una empresa que se dedica a la venta de productos de salud pide a sus clientes que al registrarse en su página introduzcan los siguientes datos:
