--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
@@ -273,16 +273,16 @@ Llena la siguiente tabla:
 
     Requerimiento                                               Tipo de dato
 
-    Nombre Completo:
+    Nombre Completo:                                             STRING
     
-    Peso en kilogramos:
+Peso en kilogramos:                                              NUMERICO
     
-    Correo electrónico:
+    Correo electrónico:                                          STRING
     
-    Número de teléfono:
+    Número de teléfono:                                           NUMERICO
     
-    Resuelve el siguiente CAPTCHA: 3 > 4
-    ¿Cierto o Falso?
+    Resuelve el siguiente CAPTCHA: 3 > 4                          RACIONALES
+    ¿Cierto o Falso?                                              BOLEANO
 
 
 
@@ -297,49 +297,49 @@ Preguntas:
 
                                          Respuesta: 
 
-    1. int
+    1. int                                NO VALIDO
 
-    2. anInt
+    2. anInt                              VALIDO
 
-    3. 3list
+    3. 3list                              NO VALIDO
 
-    4. i1
+    4. i1                                 VALIDO
 
-    5. 1
+    5. 1                                  NO VALIDO
 
-    6. thing1
+    6. thing1                             VALIDO
 
-    7. 1thing
+    7. 1thing                             NO VALIDO
 
-    8. ONE-HUNDRED
+    8. ONE-HUNDRED                        NO VALIDO
 
-    9. ONE_HUNDRED
+    9. ONE_HUNDRED                        VALIDO      
 
-    10. something2do
+    10. something2do                      VALIDO
 
 
 Indica que tipo de variable es en cada caso: (valor 0.3 por cada uno)
 
                                            Tipo de variable
-    11. iva = 0.15 
+    11. iva = 0.15                              NUMERICO
 
-    12. letra = ‘a’
+    12. letra = ‘a’                             ALFANUMERICO
+                  
+    13. suma = a + b/ c                         TRABAJO
 
-    13. suma = a + b/ c 
+    14. interrup = true                         LOGICO
 
-    14. interrup = true
+    15. apellido= ‘lopez’                       ALFANUMERICO
 
-    15. apellido= ‘lopez’ 
+    16. x = x + 1                               CONTADOR
 
-    16. x = x + 1
+    17. suma = suma + num                       ACUMULADOR
 
-    17. suma = suma + num 
+    18. c = sqrt(a*a + b*b)                     TRABAJO
 
-    18. c = sqrt(a*a + b*b)
+    19. costo=750                               NUMERICO
 
-    19. costo=750
-
-    20. i = i - 1
+    20. i = i - 1                               CONTADOR
     
     
   [Regresar al menu principal del módulo](https://github.com/escuelaDeCodigoMargaritaMaza/escuela_de_codigo/tree/main/PENSAMIENTO_COMPUTACIONAL)
