--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/2. EVALUACION_DE_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/2. EVALUACION_DE_MODULO.md
@@ -32,14 +32,21 @@ Actividad:
    2. Realiza un diagrama de flujo de la suma de dos números cualesquiera. Se debe partir de que para poder obtener la suma es necesario contar con dos números, pues el
     proceso que debemos realizar es precisamente la suma de éstos, la cual se asigna a una variable que se reporta como resultado del proceso. (valor 2.8)
     
+   ![image](https://user-images.githubusercontent.com/101668305/161092408-2ba50011-8177-4c11-98f4-3b77853a011e.png)
+
  #### Práctica 7
 7. ESTRUCTURAS DE CONTROL
 Objetivo: Verificar el dominio de los diagramas de flujo, condicional e iterativo a través de preguntas abiertas.
 Indicaciones: Pedir esquematizar en un diagrama de flujo según lo que se pide.
 #### Actividad:
   1. Realiza un diagrama de flujo que muestre el proceso para determinar si un número es positivo o negativo. (valor 12 puntos, usando la rúbrica de estructura de control)
-  2. Realiza un diagrama de flujo para obtener la suma de diez cantidades mediante la utilización de un ciclo “Mientras”. (valor 12 puntos, usando la rúbrica de estructura de
+ 
+ ![image](https://user-images.githubusercontent.com/101668305/161096159-4b043fac-4dac-46d4-b243-5c4c621487ec.png)
+ 
+ 2. Realiza un diagrama de flujo para obtener la suma de diez cantidades mediante la utilización de un ciclo “Mientras”. (valor 12 puntos, usando la rúbrica de estructura de
 control)
+
+
 
 #### Práctica 8
 8. PSEUDOCÓDIGO
