--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/2. EVALUACION_DE_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/2. EVALUACION_DE_MODULO.md
@@ -46,6 +46,7 @@ Indicaciones: Pedir esquematizar en un diagrama de flujo según lo que se pide.
  2. Realiza un diagrama de flujo para obtener la suma de diez cantidades mediante la utilización de un ciclo “Mientras”. (valor 12 puntos, usando la rúbrica de estructura de
 control)
 
+![image](https://user-images.githubusercontent.com/101668305/161097017-05460127-d61c-4220-9bb2-288f68c13637.png)
 
 
 #### Práctica 8
