--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/2. EVALUACION_DE_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/2. EVALUACION_DE_MODULO.md
@@ -59,5 +59,40 @@ Indicaciones: Pedir escribir lo más explícitamente posible el pseudocódigo co
 #### Actividad:
 
   1. Escribir el pseudocódigo de un programa que imprima los números pares que se encuentran entre 0 y 100. (valor 12 puntos, usando la pseudocódigo)
+
+Algoritmo NUMEROSPARES
+	
+	Para numers<-0 Hasta 100 Con Paso 2 Hacer
+		Escribir numers
+	Fin Para
+	
+FinAlgoritmo
+
+![image](https://user-images.githubusercontent.com/101668305/161099828-177eb516-cd93-44ab-90ac-bd6713efce48.png)
+
+
   2. Escribir el pseudocódigo de un programa que determine cuánto se debe pagar por equis cantidad de lápices considerando que si son 1000 o más el costo es de 85¢; de lo
 contrario, el precio es de 90¢. (valor 12 puntos, usando la pseudocódigo)
+
+Algoritmo Costotlap
+	
+	Escribir "Ingresa el numero de lapices que desea comprar"
+	Leer nlap
+	
+	Si nlap >= 1000 Entonces
+		total = nlap*.85
+		Escribir "El total a pagar es de $" total 
+		escribir"Gracias por tu compra, regresa pronto : )"
+	SiNo
+		total =nlap*.9
+		Escribir "El total a pagar es de $" total 
+		escribir"Gracias por tu compra, regresa pronto : )"
+	Fin Si
+	
+FinAlgoritmo
+
+![image](https://user-images.githubusercontent.com/101668305/161102306-c896a838-f46e-4d30-9bc8-5358a695c3e3.png)
+
+
+
+
