--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/2. EVALUACION_DE_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/2. EVALUACION_DE_MODULO.md
@@ -10,20 +10,37 @@ Actividad:
   
   Conectores
   
+  ![image](https://user-images.githubusercontent.com/101668305/161103811-0dbca1fe-b35f-4466-95ae-8bc935a3c650.png)
+
   Decisión múltiple
   
+  ![image](https://user-images.githubusercontent.com/101668305/161103881-316f4157-b5d3-4655-9d37-b4dcc2eb59ed.png)
+
   Imprimir resultados
   
+  ![image](https://user-images.githubusercontent.com/101668305/161103931-754a3035-a334-4669-bde2-1d8b8df35248.png)
+
   Proceso
-  
+
+![image](https://user-images.githubusercontent.com/101668305/161103994-fd5e9d7a-2360-4648-afd9-f939f593a675.png)
+
   Entrada de datos
   
-  Terminal /Inicio
+  ![image](https://user-images.githubusercontent.com/101668305/161104108-adcda931-e789-496d-8594-8b89f4ee2271.png)
   
+  Terminal /Inicio
+
+![image](https://user-images.githubusercontent.com/101668305/161104176-82b816df-dcec-427d-9214-e3736ddfb40a.png)
+
   Flujo de datos
+  
+  ![image](https://user-images.githubusercontent.com/101668305/161104277-970d663c-2142-4d9e-ae22-0c3041753abf.png)
+
   
   Decisión
   
+  ![image](https://user-images.githubusercontent.com/101668305/161104443-3e981822-0ac8-411a-a727-23c3e21966c4.png)
+
   ![image](https://user-images.githubusercontent.com/91554777/160035477-c0f52624-a62c-40d0-b2e2-3dccdd8549e4.png)
 
   
