--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
@@ -279,7 +279,7 @@ Peso en kilogramos:                                              NUMERICO
     
     Correo electrónico:                                          STRING
     
-    Número de teléfono:                                           NUMERICO
+    Número de teléfono:                                           string      
     
     Resuelve el siguiente CAPTCHA: 3 > 4                          RACIONALES
     ¿Cierto o Falso?                                              BOLEANO
